# LaneLog

./: .dockerignore  .gitignore  Dockerfile  README.md
install/: local_setup.sh  setup.sh
install/lanelog_curator/lib/lanelog_curator/: lanelog_curator
install/lanelog_curator/share/lanelog_curator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/lanelog_curator/: CMakeLists.txt
src/lanelog_curator/data/raw_logs/: map_aligned_log.csv  map_aligned_logs.csv  synthetic_log.csv
src/lanelog_curator/outputs/: curated_frames.csv  quality_report.json
src/lanelog_curator/scripts/: run_pipeline.sh
src/lanelog_curator/src/: main.cpp
src/lanelog_curator/tools/: map_aligned_log.py
src/lanelog_curator/ui/: curate_app.py
