<?xml version="1.0"?>
<package format="3">
  <name>lanelog_curator</name>
  <version>0.0.1</version>
  <description>Map-aware driving log curation pipeline using Lanelet2</description>
  <maintainer email="subashram773@gmail.com">Subash Ram</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>